[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "plotly>=6.0.0",
    "python-whois>=0.9.5",
    "requests>=2.32.3",
    "streamlit>=1.43.1",
    "trafilatura>=2.0.0",
    "whois>=1.20240129.2",
]
